{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 221,
  "lineage": "d7567ec8-1de8-7add-f14d-1d6ae319cec6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "travel-buddy-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:329220019039:instance/i-0060bae2acf304a80",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0060bae2acf304a80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0baa2b58e6611f6df",
            "private_dns": "ip-10-0-10-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.121",
            "public_ip": "44.210.122.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a90337fac41aafc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ad952dd569255ce",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be5c5a64d10a557b"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer-key",
            "aws_security_group.travel-buddy-sgroup",
            "aws_subnet.travel-buddy-subnet",
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "travel-buddy-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:internet-gateway/igw-05cb4dfa8b0287a3e",
            "id": "igw-05cb4dfa8b0287a3e",
            "owner_id": "329220019039",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0cafb4d832e03824a"
          },
          "dependencies": [
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "travel-buddy-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:route-table/rtb-0ad2d3c6a021d622f",
            "id": "rtb-0ad2d3c6a021d622f",
            "owner_id": "329220019039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cb4dfa8b0287a3e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rtb"
            },
            "tags_all": {
              "Name": "dev-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cafb4d832e03824a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.travel-buddy-igw",
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "travel-buddy-rtba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb0b12fdb285e1e",
            "route_table_id": "rtb-0ad2d3c6a021d622f",
            "subnet_id": "subnet-00ad952dd569255ce"
          },
          "dependencies": [
            "aws_internet_gateway.travel-buddy-igw",
            "aws_route_table.travel-buddy-route-table",
            "aws_subnet.travel-buddy-subnet",
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "travel-buddy-sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:security-group/sg-0be5c5a64d10a557b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0be5c5a64d10a557b",
            "ingress": [],
            "name": "terraform-20230510074336300600000001",
            "name_prefix": "terraform-",
            "owner_id": "329220019039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-travel-buddy-sg"
            },
            "tags_all": {
              "Name": "dev-travel-buddy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cafb4d832e03824a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "travel-buddy-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:subnet/subnet-00ad952dd569255ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ad952dd569255ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329220019039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-travel-buddy-subnet"
            },
            "tags_all": {
              "Name": "dev-travel-buddy-subnet"
            },
            "vpc_id": "vpc-0cafb4d832e03824a"
          },
          "dependencies": [
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "travel-buddy-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:vpc/vpc-0cafb4d832e03824a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0888844e3935e9c85",
            "default_route_table_id": "rtb-07475883e0de5510b",
            "default_security_group_id": "sg-0f315b52af5a256ba",
            "dhcp_options_id": "dopt-0a60a8c3ea300a177",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cafb4d832e03824a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07475883e0de5510b",
            "owner_id": "329220019039",
            "tags": {
              "Name": "dev-travel-buddy-vpc"
            },
            "tags_all": {
              "Name": "dev-travel-buddy-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:security-group-rule/sgr-0b355db9a21b41a46",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0b355db9a21b41a46",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0be5c5a64d10a557b",
            "security_group_rule_id": "sgr-0b355db9a21b41a46",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.travel-buddy-sgroup",
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:security-group-rule/sgr-0e798635751ec713a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e798635751ec713a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0be5c5a64d10a557b",
            "security_group_rule_id": "sgr-0e798635751ec713a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.travel-buddy-sgroup",
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329220019039:security-group-rule/sgr-0445793f9c99a596d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0445793f9c99a596d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0be5c5a64d10a557b",
            "security_group_rule_id": "sgr-0445793f9c99a596d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.travel-buddy-sgroup",
            "aws_vpc.travel-buddy-vpc"
          ]
        }
      ]
    }
  ]
}